renomeei as imagens e troque o background da div pai do form

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
                     O trabalho remoto não foi uma opção,
                     mas sim necessário e assim se foram quase 2 anos de home office.
                 </p>
-                <img src="./assets/Image.svg" alt="">
+                <img src="./assets/escritorio_laranja_esqueda.svg" alt="">
             </div>
             <div class="_subsection_01">
-                <img src="./assetss/Image2.svg" alt="">
+                <img src="./assets/escritorio_laranja_direita.svg" alt="">
                 <p>
                     Porém, hoje com a vacinação em andamento,
                     já podemos enxergar novas possibilidades,
@@ -34,28 +34,28 @@
         <section class="_section _section_2">
 
             <div class="_subsection _sub_01">
-                <img src="./assetss/image4.svg" alt="">
+                <img src="./assets/escritorio_azul.svg" alt="">
             </div>
 
             <div class="_subsection _sub_02">
                 <div class=_topics>
-                    <img src="./assetss/relogio.svg" alt="">
+                    <img src="./assets/relogio.svg" alt="">
                     <p>O Escritório estará disponível
                         das 08:00 às 18:00.</p>
 
                 </div>
                 <div class=_topics>
-                    <img src="./assetss/termomentro.svg" alt="">
+                    <img src="./assets/termomentro.svg" alt="">
                     <p>A temperatura de todos será
                         checada no local para a
                         segurança de todos.</p>
                 </div>
                 <div class=_topics>
-                    <img src="./assetss/mascara.svg" alt="">
+                    <img src="./assets/mascara.svg" alt="">
                     <p>O uso da máscara é obrigatório.</p>
                 </div>
                 <div class=_topics>
-                    <img src="./assetss/distanciamento.svg" alt="">
+                    <img src="./assets/distanciamento.svg" alt="">
                     <p>As mesas possuem um distanciamento seguro para todos.</p>
                 </div>
 
@@ -67,7 +67,7 @@
         </section>
         <section class="_section _section_3" id="section_03">
             <div class="_img_section_3">
-                <img src="./assets/Image3.svg" alt="">
+                <img src="./assets/escritoio_lilas.svg" alt="">
             </div>
             <div>
                 <form id="_agendamento">
